# market-analysis-audit-lab

./: .dockerignore  .env.example  .gitignore  .grype.yaml  ASSET_LICENSES.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.fa.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fa.md  CONTRIBUTING.md  DCO  Dockerfile  GOVERNANCE.fa.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  PRIVACY.fa.md  PRIVACY.md  README.fa.md  README.md  ROADMAP.md  SECURITY.fa.md  SECURITY.md  SUPPORT.fa.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  dependency-review.yml  release.yml  secret-scan.yml
audit_lab/: __init__.py  __main__.py  cli.py  demo.py  publication.py  settings.py  web.py
audit_lab/models/: __init__.py  claims.py  scoring.py
audit_lab/prompts/: claim_extraction_system.md  scoring_system.md
audit_lab/schemas/: claim_extraction.schema.json
audit_lab/stages/: classify.py  collect.py  extract_claims.py  fetch_outcomes.py  finalize.py  import_sources.py  manifest.py  report.py  score_claims.py  transcribe.py  verify.py
audit_lab/static/: app.css  app.js
audit_lab/templates/: dashboard.html
audit_lab/utils/: hash.py  jsonio.py  text.py  validation.py
configs/: README.md  assets.example.json  categories.example.json
docs/en/: architecture.md  artifacts-and-reproducibility.md  claim-and-scoring-model.md  configuration.md  deployment.md  development-and-testing.md  fairness-and-publication.md  faq-and-glossary.md  index.md  installation.md  legal-and-rights.md  market-data.md  methodology.md  openai-models-and-cost.md  outputs-and-dashboard.md  privacy.md  quickstart.md  (+5 more)
examples/: README.md
scripts/: build_public_release_assets.py  check_dco.py  check_public_release.py  generate_audit_report.py  generate_dependency_inventory.py
tests/: test_claims.py  test_classify.py  test_demo.py  test_import_sources.py  test_manifest.py  test_outcomes_and_scoring.py  test_pdf_report.py  test_publication_and_finalize.py  test_release_assets.py  test_release_hygiene.py  test_report_presentation.py  test_settings.py  test_text.py  test_transcription.py  test_validation.py  test_version_metadata.py
(+25 files in other folders)
